fix overflow

--- a/src/app/_components/language-switcher/language-switcher.component.scss
+++ b/src/app/_components/language-switcher/language-switcher.component.scss
@@ -40,6 +40,7 @@
     box-shadow: 0 0 20px 5px var(--card-shadow);
     border-radius: var(--border-radius);
     padding: 5px 0;
+    overflow: hidden;
 
     &.open {
         display: block;
